# hello_world_vala_log

./: Construtor  LICENSE  README.md  Teste  meson.build
src/: Construtor.vala  HelloWorldValaLog.vala  Teste.vala
